--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,35 @@
+body{
+margin: 0;
+}
+.loginOuter{
+  display: flex;
+  justify-content: center;
+  font-family: serif;
+  font-weight: bolder;
+}
+.loginBtn{
+  cursor: pointer;
+}
+.items{
+  border: 10px solid black;
+}
 
+.log {
+  padding: 5px;
+}
 
-BODY{
-  background-image: radial-gradient(circle at 29% 55%, rgb(0, 0, 0) 0%, hsla(329, 0%, 99%, 0.05) 4%, transparent 4%, transparent 44%, transparent 44%, transparent 100%), radial-gradient(circle at 85% 89%, hsla(329, 0%, 99%, 0.05) 0%,rgb(4, 0, 8) 51%, transparent 51%, transparent 52%, transparent 52%, transparent 100%), radial-gradient(circle at 6% 90%, hsla(329, 0%, 99%, 0.05) 0%, hsla(61, 95%, 47%, 0.05) 53%, transparent 53%, transparent 64%, transparent 64%, transparent 100%), radial-gradient(circle at 35% 75%,rgb(8, 8, 8) 0%, hsla(329, 0%, 99%, 0.05) 6%, transparent 6%, transparent 98%, transparent 98%, transparent 100%), radial-gradient(circle at 56% 75%, rgb(242, 240, 240) 0%, hsla(329, 0%, 99%, 0.05) 16%, transparent 16%, transparent 23%, transparent 23%, transparent 100%), radial-gradient(circle at 42% 0%,rgb(254, 254, 254) 0%, rgb(17, 17, 17) 3%, transparent 3%, transparent 26%, transparent 26%, transparent 100%), radial-gradient(circle at 29% 28%,rgb(254, 252, 252) 0%, hsla(329, 0%, 99%, 0.05) 51%, transparent 51%, transparent 75%, transparent 75%, transparent 100%), radial-gradient(circle at 77% 21%,rgb(255, 254, 254) 0%, hsla(329, 0%, 99%, 0.05) 35%, transparent 35%, transparent 55%, transparent 55%, transparent 100%), radial-gradient(circle at 65% 91%, rgb(8, 8, 8) 0%, hsla(329, 0%, 99%, 0.05) 46%, transparent 46%, transparent 76%, transparent 76%, transparent 100%), linear-gradient(45deg, rgb(5, 5, 5), rgb(4, 0, 8));
-  min-height: 400px;
-  padding: 20px;
-  color: #DDDDDD;
-  font-family: verdana;
+a{
+  color: rgb(4, 4, 4);
+  cursor: pointer;
+}
+.Game{
+  padding: 50px;
+  background-image: radial-gradient(circle at 29% 55%, rgb(0, 0, 0) 0%, hsla(329, 0%, 99%, 0.05) 4%, transparent 4%, transparent 44%, transparent 44%, transparent 100%), radial-gradient(circle at 85% 89%, hsla(329, 0%, 99%, 0.05) 0%, rgb(4, 0, 8) 51%, transparent 51%, transparent 52%, transparent 52%, transparent 100%), radial-gradient(circle at 6% 90%, hsla(329, 0%, 99%, 0.05) 0%, hsla(61, 95%, 47%, 0.05) 53%, transparent 53%, transparent 64%, transparent 64%, transparent 100%), radial-gradient(circle at 35% 75%, rgb(8, 8, 8) 0%, hsla(329, 0%, 99%, 0.05) 6%, transparent 6%, transparent 98%, transparent 98%, transparent 100%), radial-gradient(circle at 56% 75%, rgb(242, 240, 240) 0%, hsla(329, 0%, 99%, 0.05) 16%, transparent 16%, transparent 23%, transparent 23%, transparent 100%), radial-gradient(circle at 42% 0%, rgb(254, 254, 254) 0%, rgb(17, 17, 17) 3%, transparent 3%, transparent 26%, transparent 26%, transparent 100%), radial-gradient(circle at 29% 28%, rgb(254, 252, 252) 0%, hsla(329, 0%, 99%, 0.05) 51%, transparent 51%, transparent 75%, transparent 75%, transparent 100%), radial-gradient(circle at 77% 21%, rgb(255, 254, 254) 0%, hsla(329, 0%, 99%, 0.05) 35%, transparent 35%, transparent 55%, transparent 55%, transparent 100%), radial-gradient(circle at 65% 91%, rgb(254, 8, 8) 0%, hsla(329, 0%, 99%, 0.05) 46%, transparent 46%, transparent 76%, transparent 76%, transparent 100%), linear-gradient(45deg, rgb(5, 5, 5), rgb(4, 0, 8));
+    background-repeat: no-repeat;
+    background-size: 100%;
+    min-height: 1000px;
+    color: #DDDDDD;
+    font-family: verdana;
 }
 
 h2{
@@ -18,23 +42,23 @@ h2{
 h3{
   display: flex;
   color: rgb(251, 248, 248);
-   justify-content: center;
+  justify-content: center;
  
 }
 
 form{
   display: flex;
-    color: rgb(8, 8, 8);
-    flex-direction: row;
+  color: rgb(8, 8, 8);
+  flex-direction: row;
    
 }
 
 #result {
   display: flex;
   justify-content: center;
-  color: rgb(249, 245, 245);
-  font-size: large;
-  font-weight: bolder;
+  color: rgb(6, 0, 0);
+  font-family: fantasy;
+  font-size: 40px;
   animation: bounce .6s;
   animation-direction: normal;
   animation-iteration-count: infinite;
@@ -55,21 +79,50 @@ ul{
   list-style-type: none;
 }
 
-.restart{
-   display: flex;
-   justify-content: flex-end;
-   color: rgb(13, 13, 14);
-   font-weight: bolder;
-      
+.deck :hover{
+  cursor: pointer;
+  transform: scale(1.3);
 }
 
-#resetButton{
-  color: rgb(3, 3, 3);
-  background-color: rgb(247, 246, 246);
-  font-weight: bolder;
+button :hover{
+  transform: scale(1.3);
+}
+
+form :hover{
+  transform: scale(1.2)
+}
+.button{
+    font-family: fantasy;
+    border: 1px solid rgb(252, 4, 4);
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
+    font-weight: bolder;
+    font-size: 40px;
+    cursor: pointer;
+   
+}
+
+.restart :hover{
+  display: flex;
+  justify-content: flex-end;
+  color: rgb(13, 13, 14);
+  transform: scale(1.2)
+}
+
+#resetButton {
+  font-family: fantasy;
+  float: right;
+  border: 1px solid rgb(255, 0, 0);
+  border-radius: 20px;
+  color: rgb(254, 253, 253);
+  background-color: rgb(255, 0, 0);
+  font-size: 40px;
+  cursor: pointer;
 }
 
 #memory{
+  font-family: fantasy;
   display: flex;
   color: rgb(0, 0, 0);
   animation-direction: normal;
@@ -77,7 +130,22 @@ ul{
   font-size: xxx-large;
   font-weight: bolder;
   opacity: .79;
-      
+  animation: name 4s infinite;
+}
+
+@keyframes name {
+  0% {
+    color: rgb(252, 251, 251);
+  }
+
+  75% {
+    color: rgb(0, 0, 0);
+  }
+
+  100% {
+    color: rgb(255, 0, 0);
+  }
+
 }
 
 #points {
@@ -91,6 +159,7 @@ ul{
 }
 
 #score {
+  font-family: fantasy;
   color: rgb(8, 8, 8);
   font-size: xxx-large;
   font-weight: bolder;
